feat: fix contract schema and server url
